--- a/Introduction to R.Rmd
+++ b/Introduction to R.Rmd
@@ -76,6 +76,10 @@ variable2
 
 ```{r }
 #### Start solution ####
+q2 <- factor(c("Employed","Employed","Unemployed","Self-Employed","Employed","Self-Employed","Unemployed"))
+
+q2
+unclass(q2)
 ```
 
 
@@ -113,6 +117,11 @@ variable2
 
 ```{r }
 #### Start solution ####
+q3 <- data.frame(CustomerID =c(NA,001,002,003,004), hasAccount = c('NO','YES','YES','YES',"NO"), totalBalance = c(NA,"10,000","100","0",NA))
+
+nrow(q3)
+ncol(q3)
+names(q3)
 ```
 
 
@@ -155,15 +164,54 @@ variable2
 
 ```{r }
 #### Start solution ####
+x <- c(1,2,3,5,7,11)
+a = 1:100
+for(i in seq_along(a)) {
+  if((i%%2 == 0)|(i%%3 ==0)|(i%%5 ==0)|(i%%7 ==0)|(i%%11 ==0)) {
+  }else {
+    x[i] <-  a[i]
+    
+  }
+}
+
+x1 <- is.na(x)
+x <- x[!x1]
+cat("Prime Numbers from 1 to 100:" ,x)
+
+
+
 ```
 
 
 ```{r }
 
+var1 <- 0
+while(var1 <= 10) {
+  print(var1)
+  var1 <- var1 +1
+}
+
 ```
 
 
 ```{r }
+x2 <- c(1,2,3,5,7,11)
+a = 1:100
+y = 5
+for(i in seq_along(a)) {
+  if(y >= 10) {
+    break
+  }else if((i%%2 == 0)|(i%%3 ==0)|(i%%5 ==0)|(i%%7 ==0)|(i%%11 ==0)) {
+  }else {
+    x2[i] <-  a[i]
+    print(i)
+    y = y + 1
+    
+  }
+}
+x1 <- is.na(x2)
+print(x2[!x1])
+
 
 ```
 
@@ -194,6 +242,13 @@ variable2
 
 ```{r }
 #### Start solution ####
+mat_1 <- matrix(1:9, 3,3)
+
+for(i in seq_len(nrow(mat_1))) {
+  for(j in seq_len(ncol(mat_1))){
+    print(mat_1[i, j])
+  }
+}
 ```
 
 
